# torch_stable_rs_prototype

./: Cargo.toml  README.md
data_generator/: Cargo.toml  symlink_into_venv.sh
data_generator/src/: lib.rs  main.rs
example_vgg/: Cargo.toml  README.md  build.rs  convert_pth.py  pytorch_vgg11.py
example_vgg/src/: lib.rs  main.rs
flash_powder/: Cargo.toml  build.rs  test_gen.py
flash_powder/src/: conversion.rs  core_methods.rs  data.rs  dtype.rs  factory.rs  functional.rs  index.rs  lib.rs  methods.rs  native_functions.rs  nn.rs  printing.rs  properties.rs  size.rs  tensor.rs  torch.rs
scratch/test_torch_stable/: Cargo.toml  build.rs
scratch/test_torch_stable/src/: lib.rs  main.rs
torch_stable/: Cargo.toml  build.rs
torch_stable/src/: lib.rs  util.rs
torch_stable/src/aoti_torch/: mod.rs
torch_stable/src/aoti_torch/c/: shim.rs
torch_stable/src/contrib/: flash_powder.rs  mod.rs
torch_stable/src/contrib/flash_powder/: mod.rs  tensor.rs
torch_stable/src/headeronly/: core.rs
torch_stable/src/stable/: accelerator.rs  device.rs  mod.rs  ops.rs  stableivalue_conversions.rs  tensor.rs
torch_stable/src/stable/c/: mod.rs  shim.rs
torch_stable/suppressions/: Makefile  main.cpp  wrangle_suppressions.py
torch_stable/valgrind/: .gitignore  Makefile  combined.supp  main.cpp  valgrind.sh
train/: dataset_generator.py  drive_loader.py  model.py  train.py
util/: python_truth.py
util/valgrind/: Makefile  combined.supp  main.cpp  rust_generic.supp  valgrind.sh  wrangle_suppressions.py
