[package]
name = "flash_powder"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[lib]
#crate-type=["cdylib", "rlib"]

[dependencies]
libc = {workspace=true}
anyhow = {workspace=true}
zerocopy = {workspace=true}
torch_stable = {workspace=true, features=["use_torch_devel"]}

[build-dependencies]
torch_stable = {workspace=true, features=["use_torch_devel"]}
