[package]
name = "flash_powder"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[lib]
#crate-type=["cdylib", "rlib"]

[dependencies]
anyhow = {workspace=true}
# For byte access into tensor
zerocopy = {workspace=true}
torch_stable = {workspace=true, features=[ ]}

# For Shape
tinyvec = {workspace=true, features=["alloc"]}

dyn-clone = {workspace=true}
[build-dependencies]
torch_stable = {workspace=true, features=[ ]}


[features]

# Version that is being targetted.
v2_13 = ["torch_stable/v2_13"]

# Whether to link against torch_cuda.
cuda = ["torch_stable/cuda"]
