[package]
name = "torch_stable"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[lib]

[dependencies]
libc = {workspace=true}
anyhow = {workspace=true}
zerocopy = {workspace=true}

[build-dependencies]
cc={workspace=true}



[features]

# Version that is being targetted.
v2_13 = []

# Whether to link against torch_cuda.
cuda = []
